# tabbolt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tabbolt/: __init__.py  api.py  cli.py  geometry.py  models.py
src/tabbolt/debug/: __init__.py  overlay.py
src/tabbolt/detect/: __init__.py  base.py  plumber.py
src/tabbolt/export/: __init__.py  csv.py  dataframe.py  html.py  md.py
src/tabbolt/plugins/: entrypoints.py
src/tabbolt/resolve/: __init__.py  grid.py  merge.py  stitch.py
tests/: test_basic_table.py  test_exporters.py  test_fill_policy.py  test_merged_cells.py  test_multipage_stitch.py  test_nolines.py  test_ragged.py  test_rotation.py  utils_pdf.py
